--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Professor"
   location         : "Beijing, China"
   employer         : "Beijing University of Posts and Telecommunications"
-  uri              : https://episceschen.github.io/ElevenChen.github.io
+  uri              : 
   email            : "sgwang@bupt.edu.cn" 
 
   # Academic websites
