--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://episceschen.github.io/ElevenChen.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : "https://wangshangguang.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -24,7 +24,7 @@ author:
   avatar           : "main.png"
   name             : "Shangguang Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Professor"
+  bio              : ""
   location         : "Beijing, China"
   employer         : "Beijing University of Posts and Telecommunications"
   uri              : 
