--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "main.png"
   name             : "Shangguang Wang"
   pronouns         : # example: "she/her"  
-  bio              : ""
+  bio              : "a professor at the School of Computer Science, Beijing University of Posts and Telecommunications"
   location         : "Beijing, China"
   employer         : "Beijing University of Posts and Telecommunications"
   uri              : 
