--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "main.png"
   name             : "Shangguang Wang"
   pronouns         : # example: "she/her"  
-  bio              : "a professor at the School of Computer Science, Beijing University of Posts and Telecommunications"
+  bio              : "Professor at the School of Computer Science, Beijing University of Posts and Telecommunications"
   location         : "Beijing, China"
   employer         : # "Beijing University of Posts and Telecommunications"
   uri              : 
@@ -32,12 +32,12 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=CSrn-jIAAAAJ&hl=en"
   impactstory      : # URL
   orcid            : #"http://orcid.org/yourorcidurl"
   semantic         : # URL
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Shangguang-Wang"
   scopus           : # URL
 
   # Repositories and software development
