--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Projects"
     url: /projects/
   
-  - title: "Activities"
-    url: /activities/
+  - title: "Services"
+    url: /services/
 
   - title: "Resources"
     url: /resources/
