--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "main.png"
+  avatar           : "main.jpg"
   name             : "Shangguang Wang"
   pronouns         : # example: "she/her"  
   bio              : "Professor at the School of Computer Science, Beijing University of Posts and Telecommunications"
